--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "A minimal Electron application",
   "main": "public/electron.js",
   "repository": "https://github.com/electron/electron-quick-start",
-  "homepage": ".",
   "author": "GitHub",
   "build": {
     "publish": [
@@ -39,6 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "electron": "electron .",
     "dist": "electron-builder"
   },
   "eslintConfig": {
@@ -63,15 +63,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ejs": "^3.0.1",
     "electron-is-dev": "^1.1.0",
     "electron-updater": "^4.1.2",
+    "express": "^4.17.1",
     "json2csv": "^4.5.4",
     "node-pre-gyp": "^0.14.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "sae_j2534_api": "^1.0.0"
+    "sae_j2534_api": "^1.0.0",
+    "serve-handler": "^6.1.2"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
