--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "electron-updater": "^4.1.2",
     "express": "^4.17.1",
     "json2csv": "^4.5.4",
+    "lodash": "^4.17.15",
     "node-pre-gyp": "^0.14.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
