--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "node-pre-gyp": "^0.14.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-json-view": "^1.19.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "sae_j2534_api": "^1.0.0",
