--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "express": "^4.17.1",
     "json2csv": "^4.5.4",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mousetrap": "^1.6.5",
     "node-pre-gyp": "^0.14.0",
     "react": "^16.13.0",
