--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "t-box-tester",
-  "version": "3.2.0",
+  "version": "3.2.2",
   "private": true,
   "description": "A minimal Electron application",
   "main": "public/electron.js",
@@ -72,6 +72,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mousetrap": "^1.6.5",
+    "node-pre-gyp": "^0.14.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-json-view": "^1.19.1",
